--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
 </head>
 <body>
     <h1>Odin Recipe</h1>
+    <img src="image/im.png">
+     <h1>Recipes</h1>
+
+     <ul>
+        <li><a href="recipes/Dillpickledip.html">Dill Pickle Dip</a></li>
+        <li><a href="recipes/Pickledip.html">Pickle Dip</a></li>
+        <li><a href="recipes/Uglydip.html">Ugly Dip</a></li>
+     </ul>
 </body>
 </html>
