image file renamed

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
      <h1>Recipes</h1>
 
      <ul>
-        <li><a href="recipes/Dillpickledip.html">Dill Pickle Dip</a></li>
-        <li><a href="recipes/Pickledip.html">Pickle Dip</a></li>
-        <li><a href="recipes/Uglydip.html">Ugly Dip</a></li>
+        <li><a href="recipe/Dillpickledip.html">Dill Pickle Dip</a></li>
+        <li><a href="recipe/Pickledip.html">Pickle Dip</a></li>
+        <li><a href="recipe/Uglydip.html">Ugly Dip</a></li>
      </ul>
 </body>
 </html>
