recipe was udated

--- a/recipe/Dillpickledip.html
+++ b/recipe/Dillpickledip.html
@@ -7,7 +7,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Dill Pickle Dip</h1>
-   <img src="image/1.webp">
+   <img src="../image/1.webp">
     <h1>Description</h1>
 <p>This was served at our Easter lunch and was devoured. </p>
 <p>Serve with chips or crackers.</p>
