--- a/recipe/Uglydip.html
+++ b/recipe/Uglydip.html
@@ -7,7 +7,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Ugly Dip</h1>
-    <img src="image/4.webp">
+    <img src="../image/4.webp">
     <h1>Description</h1>
     <p>I went to a family event, and one of my cousins made this ugly dip recipe.</p>
        <p>The women couldn't get enough of it. </p>
