--- a/recipe/Pickledip.html
+++ b/recipe/Pickledip.html
@@ -7,7 +7,7 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>Pickle Dip</h1>
-        <img src="image/image(2).webp">
+        <img src="../image/2.webp">
         <h1>Description</h1>
             <p>Awesome homemade dip recipe served best with potato chips.</p>
             <p> Simple to make and simply wonderful to consume.</p> 
